// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReaderActionCard > renders empty-state (no books started) 1`] = `
<div
  animate="[object Object]"
  class="rounded-2xl border border-border bg-card overflow-hidden md:flex-1 md:min-w-80 md:max-w-[32rem]"
  initial="[object Object]"
  transition="[object Object]"
>
  <div
    class="relative h-40 overflow-hidden"
    style="background: linear-gradient(135deg, rgb(92, 184, 122), rgb(41, 133, 71));"
  >
    <div
      class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/20 to-transparent"
    />
    <a
      class="absolute top-3 left-3 flex items-center gap-2 rounded-full bg-black/30 backdrop-blur-sm pl-1 pr-3 py-1 ring-1 ring-white/30 hover:bg-black/40 transition-colors"
      href="/h/h1/reader/k1"
    >
      <div
        class="h-7 w-7 rounded-full flex items-center justify-center text-xs font-bold text-white ring-2 ring-white/80"
        style="background-color: rgb(92, 184, 122);"
      >
        F
      </div>
      <span
        class="text-xs font-semibold text-white"
      >
        Fynn
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right w-3 h-3 text-white/80"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </a>
    <div
      class="absolute bottom-3 left-4 right-4"
    >
      <p
        class="text-xs text-white/70 mb-0.5"
      >
        Ready to begin
      </p>
      <p
        class="font-[family-name:var(--font-marcellus)] text-lg font-bold text-white leading-tight drop-shadow line-clamp-2"
      >
        Pick a first story
      </p>
    </div>
  </div>
  <div
    class="p-4 space-y-3"
  >
    <div>
      <div
        class="h-1.5 rounded-full bg-muted/60 border border-dashed border-border"
      />
      <p
        class="mt-1.5 text-xs text-muted-foreground"
      >
        No book started yet
      </p>
    </div>
    <button
      class="w-full cursor-pointer font-[family-name:var(--font-marcellus)] inline-flex items-center justify-center gap-2 rounded-xl bg-accent px-4 py-3 text-base font-bold text-accent-foreground shadow-[0_4px_14px] shadow-accent/30 hover:opacity-90 transition-opacity"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-book-open h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 7v14"
        />
        <path
          d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
        />
      </svg>
      Pick a story
    </button>
    <a
      class="w-full flex items-center justify-between rounded-lg bg-secondary/60 px-3 py-2 text-sm text-foreground hover:bg-secondary transition-colors"
      href="/h/h1/reader/k1"
    >
      <span>
        See all 
        3
         of 
        Fynn
        's
         books
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right w-4 h-4 text-muted-foreground"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`ReaderActionCard > renders finished state 1`] = `
<div
  animate="[object Object]"
  class="rounded-2xl border border-border bg-card overflow-hidden md:flex-1 md:min-w-80 md:max-w-[32rem]"
  initial="[object Object]"
  transition="[object Object]"
>
  <div
    class="relative h-40 overflow-hidden"
    style="background: linear-gradient(135deg, rgb(92, 184, 122), rgb(41, 133, 71));"
  >
    <div
      class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/20 to-transparent"
    />
    <a
      class="absolute top-3 left-3 flex items-center gap-2 rounded-full bg-black/30 backdrop-blur-sm pl-1 pr-3 py-1 ring-1 ring-white/30 hover:bg-black/40 transition-colors"
      href="/h/h1/reader/k1"
    >
      <div
        class="h-7 w-7 rounded-full flex items-center justify-center text-xs font-bold text-white ring-2 ring-white/80"
        style="background-color: rgb(92, 184, 122);"
      >
        F
      </div>
      <span
        class="text-xs font-semibold text-white"
      >
        Fynn
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right w-3 h-3 text-white/80"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </a>
    <div
      class="absolute bottom-3 left-4 right-4"
    >
      <p
        class="text-xs text-white/70 mb-0.5"
      >
        Finished!
      </p>
      <p
        class="font-[family-name:var(--font-marcellus)] text-lg font-bold text-white leading-tight drop-shadow line-clamp-2"
      >
        Goodnight Moon
      </p>
    </div>
  </div>
  <div
    class="p-4 space-y-3"
  >
    <div>
      <div
        class="h-1.5 rounded-full bg-muted overflow-hidden"
      >
        <div
          class="h-full rounded-full transition-all"
          style="width: 100%; background-color: rgb(92, 184, 122);"
        />
      </div>
      <p
        class="mt-1.5 text-xs text-muted-foreground"
      >
        Finished — pick another
      </p>
    </div>
    <button
      class="w-full cursor-pointer font-[family-name:var(--font-marcellus)] inline-flex items-center justify-center gap-2 rounded-xl bg-accent px-4 py-3 text-base font-bold text-accent-foreground shadow-[0_4px_14px] shadow-accent/30 hover:opacity-90 transition-opacity"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-book-open h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 7v14"
        />
        <path
          d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
        />
      </svg>
      Pick another
    </button>
    <a
      class="w-full flex items-center justify-between rounded-lg bg-secondary/60 px-3 py-2 text-sm text-foreground hover:bg-secondary transition-colors"
      href="/h/h1/reader/k1"
    >
      <span>
        See all 
        8
         of 
        Fynn
        's
         books
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right w-4 h-4 text-muted-foreground"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`ReaderActionCard > renders resuming state 1`] = `
<div
  animate="[object Object]"
  class="rounded-2xl border border-border bg-card overflow-hidden md:flex-1 md:min-w-80 md:max-w-[32rem]"
  initial="[object Object]"
  transition="[object Object]"
>
  <div
    class="relative h-40 overflow-hidden"
    style="background: linear-gradient(135deg, rgb(92, 184, 122), rgb(41, 133, 71));"
  >
    <div
      class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/20 to-transparent"
    />
    <a
      class="absolute top-3 left-3 flex items-center gap-2 rounded-full bg-black/30 backdrop-blur-sm pl-1 pr-3 py-1 ring-1 ring-white/30 hover:bg-black/40 transition-colors"
      href="/h/h1/reader/k1"
    >
      <div
        class="h-7 w-7 rounded-full flex items-center justify-center text-xs font-bold text-white ring-2 ring-white/80"
        style="background-color: rgb(92, 184, 122);"
      >
        F
      </div>
      <span
        class="text-xs font-semibold text-white"
      >
        Fynn
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right w-3 h-3 text-white/80"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </a>
    <div
      class="absolute bottom-3 left-4 right-4"
    >
      <p
        class="text-xs text-white/70 mb-0.5"
      >
        Reading now
      </p>
      <p
        class="font-[family-name:var(--font-marcellus)] text-lg font-bold text-white leading-tight drop-shadow line-clamp-2"
      >
        The Gruffalo
      </p>
    </div>
  </div>
  <div
    class="p-4 space-y-3"
  >
    <div>
      <div
        class="h-1.5 rounded-full bg-muted overflow-hidden"
      >
        <div
          class="h-full rounded-full transition-all"
          style="width: 45%; background-color: rgb(92, 184, 122);"
        />
      </div>
      <p
        class="mt-1.5 text-xs text-muted-foreground"
      >
        45% complete
      </p>
    </div>
    <button
      class="w-full cursor-pointer font-[family-name:var(--font-marcellus)] inline-flex items-center justify-center gap-2 rounded-xl bg-accent px-4 py-3 text-base font-bold text-accent-foreground shadow-[0_4px_14px] shadow-accent/30 hover:opacity-90 transition-opacity"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-play h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 5a2 2 0 0 1 3.008-1.728l11.997 6.998a2 2 0 0 1 .003 3.458l-12 7A2 2 0 0 1 5 19z"
        />
      </svg>
      Continue reading
    </button>
    <a
      class="w-full flex items-center justify-between rounded-lg bg-secondary/60 px-3 py-2 text-sm text-foreground hover:bg-secondary transition-colors"
      href="/h/h1/reader/k1"
    >
      <span>
        See all 
        8
         of 
        Fynn
        's
         books
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right w-4 h-4 text-muted-foreground"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </a>
  </div>
</div>
`;
